fixed alignment issue (#192)

--- a/style.css
+++ b/style.css
@@ -15,11 +15,12 @@
 body {
 	font-family: monospace;
 	background: #f6f6f6;
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 	display: grid;
 	place-items: center;
 	max-height: 100vh;
+	overflow-x: hidden;
 }
 
 a {
